--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 
 body{
     min-height: 100vh;
-    background-color: #648DE5 ;
+    background-color: darkgray ;
     display: grid;
     place-items: center;
 
@@ -26,11 +26,12 @@ body{
 .pantalla{
     grid-column: 1 / -1;
     background-color: #CBEFB6;
-    padding: 1.4rem;
+    padding: 1.4rem right;
     font-size: 2rem;
     text-align: right;
     border-radius: .5rem;
     margin-bottom: 1rem;
+    overflow:hidden;
 }
 
 .btn{
